--- a/app/src/main/assets/core-map-serb.html
+++ b/app/src/main/assets/core-map-serb.html
@@ -23,6 +23,16 @@
   src: URL('Fonts/Agency FB.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'caviar dreams';
+  src: URL('Fonts/CaviarDreams.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'caviar dreams bold';
+  src: URL('Fonts/CaviarDreams_Bold.ttf') format('truetype');
+}
+
 .pad{width:775px;
   height: 1225px;
 margin-left: auto;
@@ -264,20 +274,20 @@ box-shadow: black 0px 0px 5px;
   <button onclick="ShowAndHide()"class = "explanation-button"> < </button>
 
   <div id="explanation" class="explanation-text">
-    <p>MURMURATION is a company that provides environemental studies all over the world using artificial intelligence and big data techniques to analyse data from satellites and other data sources.</p>
+    <p>MURMURATION pruža studije zaštite životne sredine širom sveta koristeći veštačku inteligenciju i tehnike velikih podataka za analizu podataka sa satelita i drugih izvora.</p>
 
-    <p> On this first map, we use data from Copernicus and the Sentinel 2 satellite to detect the land cover in a 20 square kilometers area. Here, we choose to detect :</p>
+    <p>Ova prva karta Srbije pokazuje od čega je napravljen kopneni pokrivač na površini od 20 km² zahvaljujući podacima dva satelita. Možete videti da li je zemljište …</p>
 
-    <img src="Cartes/Bio_carte_principale/Tile-Urban@300x.png" style="margin-left:70px;" width='30px'> urban, <br>
-    <img src="Cartes/Bio_carte_principale/Tile-Champ@300x.png" style="margin-left:70px;" width='30px'> agricultural, <br>
-    <img src="Cartes/Bio_carte_principale/Tile-Montagne@300x.png" style="margin-left:70px;" width='30px'> mountain, <br>
-    <img src="Cartes/Bio_carte_principale/Tile-Foret@300x.png" style="margin-left:70px;" width='30px'> forest, <br>
-    <img src="Cartes/Bio_carte_principale/Tile-Foret-Montagne@300x.png" style="margin-left:70px;" width='30px'> mountainous forest, <br>
-    <img src="Cartes/Bio_carte_principale/Tile-Rural@300x.png" style="margin-left:70px;" width='30px'> rural areas. <br>
+    <img src="Cartes/Bio_carte_principale/Tile-Urban@300x.png" style="margin-left:70px;" width='30px'> urbano, <br>
+    <img src="Cartes/Bio_carte_principale/Tile-Champ@300x.png" style="margin-left:70px;" width='30px'> poljoprivredno, <br>
+    <img src="Cartes/Bio_carte_principale/Tile-Montagne@300x.png" style="margin-left:70px;" width='30px'> planina, <br>
+    <img src="Cartes/Bio_carte_principale/Tile-Foret@300x.png" style="margin-left:70px;" width='30px'> šuma, <br>
+    <img src="Cartes/Bio_carte_principale/Tile-Foret-Montagne@300x.png" style="margin-left:70px;" width='30px'> planinska šuma, <br>
+    <img src="Cartes/Bio_carte_principale/Tile-Rural@300x.png" style="margin-left:70px;" width='30px'> ruralna područja. <br>
 
-    <p>Click on ? to get help.</p>
+    <p>Pritisnite ? da biste dobili pomoć.</p>
 
-    <p>Click on the arrow on the right to close this window and start your discovery of Serbia.</p>
+    <p>Pritisnite strelicu sa desne strane da zatvorite ovaj prozor i započnete vaše putovanje kroz Srbiju.</p>
 
   </div>
 
