--- a/app/src/main/assets/eco-parcour-en.html
+++ b/app/src/main/assets/eco-parcour-en.html
@@ -227,7 +227,7 @@ box-shadow: black 0px 0px 5px;
   padding:20px;
   width: 367px;
   right:40px;
-  height:190px;
+  height:180px;
   top:45%;
   z-index:10;
   font-size:14px;
@@ -281,8 +281,7 @@ box-shadow: black 0px 0px 5px;
   <button onclick="ShowAndHide()"class = "explanation-button"> < </button>
 
   <div id="explanation" class="explanation-text">
-    <p>The goal of this map is to find a greenway. You have to find the greenest track and get the best score possible on your daily travel, or your vacation trip for example.
-      The score is the mean of the three indicators on the eco-health map along the track.</p>
+    <p>This map shows the health of the bus stop areas along its journey. Click on a grey zone to know more on the three indicators level (water management, protected areas, urbanization) and get advice.</p>
 
     <p> Click on ? to get help.</p>
 
