--- a/app/src/main/assets/eco-parcour-serb.html
+++ b/app/src/main/assets/eco-parcour-serb.html
@@ -280,12 +280,11 @@ box-shadow: black 0px 0px 5px;
   <button onclick="ShowAndHide()"class = "explanation-button"> < </button>
 
   <div id="explanation" class="explanation-text">
-    <p>The goal of this map is to find a greenway. You have to find the greenest track and get the best score possible on your daily travel, or your vacation trip for example.
-      The score is the mean of the three indicators on the eco-health map along the track.</p>
+    <p>Ova mapa prikazuje zdravstveno stanje područja autobuskih stajališta tokom putovanja. Kliknite na sivu zonu da biste saznali više o nivou tri indikatora (upravljanje vodama, zaštićena područja, urbanizacija) i potražite savete.</p>
 
-    <p> Click on ? to get help.</p>
+    <p>Pritisnite na ?  biste dobili pomoć</p>
 
-    <p>Click on the arrow on the right to close this window.</p>
+    <p>Pritisnite strelicu sa desne strane da zatvorite ovaj prozor.</p>
 
   </div>
 
