--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -216,7 +216,7 @@ box-shadow: black 0px 0px 5px;
   padding:20px;
   width: 367px;
   right:40px;
-  height:480px;
+  height:460px;
   top:33%;
   z-index:10;
   font-size:14px;
@@ -270,9 +270,9 @@ box-shadow: black 0px 0px 5px;
 <button onclick="ShowAndHide()"class = "explanation-button"> < </button>
 
 <div id="explanation" class="explanation-text">
-  <p>MURMURATION is a company that provides environemental studies all over the world using artificial intelligence and big data techniques to analyse data from satellites and other data sources.</p>
+  <p>MURMURATION provides environmental studies all over the world using artificial intelligence and big data techniques to analyze data from satellites and other sources.</p>
 
-  <p> On this first map, we use data from Copernicus and the Sentinel 2 satellite to detect the land cover in a 20 square kilometers area. Here, we choose to detect :</p>
+  <p>This first map of Serbia shows what the land cover is made of in a 20km² area thanks to data from two satellites. You can see if the land is…</p>
 
   <img src="Cartes/Bio_carte_principale/Tile-Urban@300x.png" style="margin-left:70px;" width='30px'> urban, <br>
   <img src="Cartes/Bio_carte_principale/Tile-Champ@300x.png" style="margin-left:70px;" width='30px'> agricultural, <br>
@@ -283,7 +283,7 @@ box-shadow: black 0px 0px 5px;
 
   <p>Click on ? to get help.</p>
 
-  <p>Click on the arrow on the right to close this window and start your discovery of Serbia.</p>
+  <p>Click on the arrow on the right to close this window and start your journey through Serbia.</p>
 
 </div>
 
