--- a/app/src/main/assets/tuto/tuto-page-1-serb.html
+++ b/app/src/main/assets/tuto/tuto-page-1-serb.html
@@ -25,7 +25,7 @@ background-size: 775px 1225px;
 
 h3{
 	font-size: 45px;
-	margin: 50px;
+	margin: 40px;
 	text-align: center;
 	position: relative;
 	color: white;
@@ -47,6 +47,7 @@ p{	font-size: 30px;
 	position: absolute;
 	top:730px;
 	left: 258px;
+	text-align: center;
 }
 
 a{text-decoration: none;}
@@ -58,7 +59,7 @@ a{text-decoration: none;}
 <div class="pad">
 
 	<div class="text"><h3>Da li ste upoznati<br>sa Vašim životnom sredinom?<h3></div>
-	<p>- click to continue -</p>
+	<p>- Pritisni da nastaviš -</p>
 </div>
 </a>
 </body>
