--- a/app/src/main/assets/tuto/tuto-page-1.html
+++ b/app/src/main/assets/tuto/tuto-page-1.html
@@ -58,7 +58,7 @@ a{text-decoration: none;}
 <div class="pad">
 
 	<div class="text"><h3>Are you familiar <br> with your environment ?<h3></div>
-	<p>- click to continue -</p>
+	<p>- Click to continue -</p>
 </div>
 </a>
 </body>
