--- a/app/src/main/assets/tuto/tuto-page-2-serb.html
+++ b/app/src/main/assets/tuto/tuto-page-2-serb.html
@@ -46,7 +46,7 @@ p{	font-size: 30px;
 	font-family: caviar dreams bold;
 	position: absolute;
 	top:730px;
-	left: 250px;
+	left: 238px;
 	text-align: center;
 
 }
@@ -59,7 +59,7 @@ a{text-decoration: none;}
 <a href="tuto-page-3-serb.html">
 <div class="pad">
 	<div class="text"><h3>Na ovoj mapi<br>možete otkriti Srbiju<br>sa različitih aspekata.<h3></div>
-	<p>- click to continue -</p>
+	<p>- Pritisni da nastaviš -</p>
 
 </div>
 </a>
