--- a/app/src/main/assets/tuto/tuto-page-2.html
+++ b/app/src/main/assets/tuto/tuto-page-2.html
@@ -59,7 +59,7 @@ a{text-decoration: none;}
 <a href="tuto-page-3.html">
 <div class="pad">
 	<div class="text"><h3>From this map<br> you can discover Serbia<br> from different aspects !<h3></div>
-	<p>- click to continue -</p>
+	<p>- Click to continue -</p>
 
 </div>
 </a>
