--- a/app/src/main/assets/tuto/tuto-page-3-serb.html
+++ b/app/src/main/assets/tuto/tuto-page-3-serb.html
@@ -43,7 +43,7 @@ p{	font-size: 30px;
 	font-family: caviar dreams bold;
 	position: absolute;
 	top:1080px;
-	left: 315px;
+	left: 275px;
 }
 
 a{text-decoration: none;}
@@ -55,7 +55,7 @@ a{text-decoration: none;}
 <div class="pad">
 
 	<div class="text"><img src="img/bulle-A-serb.png"></div>
-	<p>- click to continue -</p>
+	<p>- Pritisni da nastaviš -</p>
 </div>
 </a>
 </body>
