--- a/app/src/main/assets/tuto/tuto-page-3.html
+++ b/app/src/main/assets/tuto/tuto-page-3.html
@@ -55,7 +55,7 @@ a{text-decoration: none;}
 <div class="pad">
 
 	<div class="text"><img src="img/bulle-A.png"></div>
-	<p>- click to continue -</p>
+	<p>- Click to continue -</p>
 </div>
 </a>
 </body>
