--- a/app/src/main/assets/tuto/tuto-page-9.html
+++ b/app/src/main/assets/tuto/tuto-page-9.html
@@ -50,7 +50,7 @@ p{	font-size: 30px;
 	<div class="pad">
 
 		<img src="img/bulle_g.png"></div>
-		<p>- click to continue -</p>
+		<p>- Click to continue -</p>
 	</div>
 </a>
 </body>
