--- a/app/src/main/assets/wildlife-serb.html
+++ b/app/src/main/assets/wildlife-serb.html
@@ -315,8 +315,8 @@ div.scrollmenu a:hover {
   padding:20px;
   width: 367px;
   right:40px;
-  height:430px;
-  top:33%;
+  height:300px;
+  top:40%;
   z-index:10;
   font-size:14px;
   font-family: caviar dreams;
@@ -359,13 +359,14 @@ div.scrollmenu a:hover {
   <button onclick="ShowAndHide()"class = "explanation-button"> < </button>
 
   <div id="explanation" class="explanation-text">
-    <p>On this map, we studied data between 2000 and 2020 from the Global Biodiversity Information Facility, an international network and data infrastructure funded by the world's governments and aimed at providing anyone, anywhere, open access to data about all types of life on Earth.</p>
+    <p>Ova mapa prikazuje rasprostranjenost nekih kultnih životinjskih vrsta i biljaka širom Srbije.
+      Koristili smo podatke iz Globalnog fonda za biodiverzitet, međunarodne mreže koja pruža otvoren pristup podacima o svim vrstama života na Zemlji, bilo kome i bilo gde.
+      Informacije o tome gde su i kada zabeležene vrste potiču iz mnogih izvora, uključujući sve od muzejskih primeraka prikupljenih pre vekova, do geotagovanih fotografija pametnih telefona koje su amateri prirodnjaci delili u poslednjih nekoliko dana ili nedelja.
+    </p>
 
-    <p>Coordinated through its Secretariat in Copenhagen, the GBIF network of participating countries and organizations, working through participant nodes, provides data-holding institutions around the world with common standards and open-source tools that enable them to share information about where and when species have been recorded. This knowledge derives from many sources, including everything from museum specimens collected in the 18th and 19th century to geotagged smartphone photos shared by amateur naturalists in recent days and weeks.</p>
+    <p>Pritisnite na ?  biste dobili pomoć.</p>
 
-    <p>CLick on ? to get help.</p>
-
-    <p>Click on the arrow on the right to close this window.</p>
+    <p>Pritisnite strelicu sa desne strane da zatvorite ovaj prozor.</p>
 
   </div>
 
