--- a/app/src/main/assets/eco-sante-en.html
+++ b/app/src/main/assets/eco-sante-en.html
@@ -18,6 +18,16 @@
   src: URL('Fonts/Agency FB.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'caviar dreams';
+  src: URL('Fonts/CaviarDreams.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'caviar dreams bold';
+  src: URL('Fonts/CaviarDreams_Bold.ttf') format('truetype');
+}
+
 .pad{width:775px;
   height: 1225px;
 margin-left: auto;
@@ -249,7 +259,7 @@ box-shadow: black 0px 0px 5px;
   padding:20px;
   width: 367px;
   right:40px;
-  height:850px;
+  height:800px;
   top:13%;
   z-index:10;
   font-size:14px;
@@ -294,29 +304,29 @@ box-shadow: black 0px 0px 5px;
 
 <div id="explanation" class="explanation-text">
 
-    <p> On this map, we used three indicators :</p>
+    <p>This map shows the health of local environments, using three indicators :</p>
 
     <center><img src="Cartes/Illu_popup/Picto-goutte.png" width='30px'> Water management<img src="Cartes/Illu_popup/Picto-goutte.png" width='30px'></center>
 
-    <p> Calculated from Aqueduct Global Maps 3.0 (Overall Water Risk layer). The different risk levels from 0 to 5 are reduced from 0 to 10 and then intersected with a hexagonal mesh of 20 km on the side which calculates the average of all the pixels of the mesh.</p>
+    <p>For each hexagonal tile, the water-related risks (such as flood, water quality and quantity) are calculated from 0 to 10.</p>
 
     <center><img src="Cartes/Illu_popup/Picto-arbre.png" width='30px'> Protected areas<img src="Cartes/Illu_popup/Picto-arbre.png" width='30px'></center>
 
-    <p> Calculated from the World Database on Protected Area. A weighting game is used to calculate the weights of the International, National or Regional protected areas (excluding only maritime areas). The rating is even stronger if the space has several levels of protection.</p>
+    <p>Each tile is rated according to its level of protection. The stronger the protection, the better the rating is. If an area combines different sources of protection (local, national or international), its rating is also higher.  </p>
 
     <center><img src="Cartes/Illu_popup/Picto-urban.png" width='30px'> Urbanisation<img src="Cartes/Illu_popup/Picto-urban.png" width='30px'></center>
 
-    <p> Calculated from GHS-SMOD data at one km resolution. The values of urban densities are noted from 0 to 10 then one intersects with a hexagonal mesh of 20km of side which calculates the average of all the pixels of the mesh.</p>
+    <p>Here, urban densities are calculated from 0 to 10 for each tile. 10 represents a wild and unspoiled land, whereas 0 indicates a fully urbanized area. </p>
 
-    <p> We then used the mean value of those three indicators in a polygon to plot the health level of a zone : </p>
+    <p> We then calculate the average of those three indicators for each tile, in order to eventually plot the eco-health level of the area that it represents. Note that each hexagon’s area is 20 square km.</p>
 
-    <img src="Cartes/Bio_carte_eco/Tile-ecosante-A@300x.png" style="margin-left:70px;" width='30px'> level A (mean greater than 6.5), <br>
+    <img src="Cartes/Bio_carte_eco/Tile-ecosante-A@300x.png" style="margin-left:70px;" width='30px'> level A (mean higher than 6.5), <br>
     <img src="Cartes/Bio_carte_eco/Tile-ecosante-B@300x.png" style="margin-left:70px;" width='30px'> level B (mean between 5.5 and 6.5), <br>
     <img src="Cartes/Bio_carte_eco/Tile-ecosante-C@300x.png" style="margin-left:70px;" width='30px'> level C (mean between 4.8 and 5.5), <br>
     <img src="Cartes/Bio_carte_eco/Tile-ecosante-D@300x.png" style="margin-left:70px;" width='30px'> level D (mean between 4.1 and 4.8), <br>
     <img src="Cartes/Bio_carte_eco/Tile-ecosante-E@300x.png" style="margin-left:70px;" width='30px'> level E (mean less than 4.1). <br>
 
-    <p> Click on a polygon to get details </p>
+    <p> Click on a tile to get more details </p>
 
     <p>Click on ? to get help.</p>
 
