--- a/app/src/main/assets/tuto/tuto-page-8.html
+++ b/app/src/main/assets/tuto/tuto-page-8.html
@@ -47,7 +47,7 @@ p{	font-size: 30px;
 <a href="tuto-page-9.html">
 <div class="pad">
 	<img src="img/bulle-f.png">
-	<p>- click to continue -</p>
+	<p>- Click to continue -</p>
 </div>
 </a>
 </body>
