--- a/app/src/main/assets/tuto/tuto-page-9-serb.html
+++ b/app/src/main/assets/tuto/tuto-page-9-serb.html
@@ -38,7 +38,7 @@ p{	font-size: 30px;
 	font-family: caviar dreams bold;
 	position: absolute;
 	top:210px;
-	left: 180px;
+	left: 150px;
 }
 </style>
 </head>
@@ -46,7 +46,7 @@ p{	font-size: 30px;
 <a href="../core-map-serb.html">
 <div class="pad">
 	<img src="img/bulle-g-serb.png">
-	<p>- click to continue -</p>
+	<p>- Pritisni da nastaviš -</p>
 </div>
 </a>
 </body>
