--- a/app/src/main/assets/wildlife-en.html
+++ b/app/src/main/assets/wildlife-en.html
@@ -313,8 +313,8 @@ div.scrollmenu a:hover {
   padding:20px;
   width: 367px;
   right:40px;
-  height:430px;
-  top:33%;
+  height:280px;
+  top:40%;
   z-index:10;
   font-size:14px;
   font-family: caviar dreams;
@@ -357,9 +357,7 @@ div.scrollmenu a:hover {
 <button onclick="ShowAndHide()"class = "explanation-button"> < </button>
 
 <div id="explanation" class="explanation-text">
-  <p>On this map, we studied data between 2000 and 2020 from the Global Biodiversity Information Facility, an international network and data infrastructure funded by the world's governments and aimed at providing anyone, anywhere, open access to data about all types of life on Earth.</p>
-
-  <p>Coordinated through its Secretariat in Copenhagen, the GBIF network of participating countries and organizations, working through participant nodes, provides data-holding institutions around the world with common standards and open-source tools that enable them to share information about where and when species have been recorded. This knowledge derives from many sources, including everything from museum specimens collected in the 18th and 19th century to geotagged smartphone photos shared by amateur naturalists in recent days and weeks.</p>
+  <p>This map shows the distribution of some iconic animal species and plants throughout Serbia. We used data from the Global Biodiversity Information Facility, an international network providing anyone, anywhere, open access to data about all types of life on Earth. Information about where and when species have been recorded comes from many sources, including everything from museum specimens collected centuries ago to geotagged smartphone photos shared by amateur naturalists in the past few days or weeks.</p>
 
   <p>Click on ? to get help.</p>
 
